--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@playwright/test": "^1.25.0",
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-node": "^1.0.0-next.96",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -40,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"pocketbase": "^0.7.1"
+		"pocketbase": "^0.7.1",
+		"socket.io": "^4.5.2"
 	}
 }
