--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@syncedstore/core": "^0.4.1",
+		"@syncedstore/svelte": "^0.4.1",
 		"pocketbase": "^0.7.1",
-		"socket.io": "^4.5.2"
+		"socket.io": "^4.5.2",
+		"y-webrtc": "^10.2.3",
+		"yjs": "^13.5.41"
 	}
 }
